# dagua

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  GRAPH_TO_CODE_PROMPT.md  LICENSE  Makefile  README.md  TODO.md  bench_100m.py  bench_1b.py  bench_300m.py  bench_50m.py  package-lock.json  package.json  pyproject.toml
.github/: CLAUDE.md
.github/workflows/: quality.yml
.project-context/: architecture.md  conventions.md
.project-context/knowledge/: decisions.md  gotchas.md
benchmarks/: AGENTS.md  bench_layout.py  bench_render.py  benchmark_comparison.py  results.json
dagua/: __init__.py  animation.py  cli.py  config.py  defaults.py  edges.py  elements.py  flex.py  graph.py  graphviz_utils.py  io.py  metrics.py  playground.py  reference_glossary.py  routing.py  showcase_gallery.py  style.py  styles.py  utils.py
dagua/eval/: __init__.py  __main__.py  aesthetic.py  benchmark.py  compare.py  graphs.py  quick.py  report.py  runtime_env.py  sweep.py  visual_audit.py
dagua/eval/competitors/: __init__.py  base.py  dagre_competitor.py  dagua_competitor.py  elk_competitor.py  graphviz_competitor.py  igraph_competitor.py  networkx_competitor.py
dagua/graphs/: __init__.py  balanced_binary_tree.yaml  bipartite_5x5.yaml  bottom_to_top.yaml  complete_k5.yaml  cross_cluster_edges.yaml  data_pipeline.yaml  deep_nesting_4.yaml  deep_nesting_6.yaml  dense_small.yaml  diamond.yaml  disconnected_mixed.yaml  disconnected_trio.yaml  feedback_with_tails.yaml  flat_many_clusters.yaml  grid_4x4.yaml  ladder.yaml  long_labels.yaml  medium_mixed.yaml  microservices.yaml  multi_cycle.yaml  narrow_deep.yaml  nested_clusters.yaml  neural_net.yaml  pipeline.yaml  residual_chain.yaml  right_to_left.yaml  self_loop.yaml  simple_ring.yaml  single_edge.yaml  star.yaml  state_machine.yaml  styled_flowchart.yaml  transformer_block.yaml  unet_symmetric.yaml  wide_shallow.yaml
dagua/layout/: AGENTS.md  CLAUDE.md  __init__.py  constraints.py  cycle.py  edge_optimization.py  engine.py  init_placement.py  layers.py  multilevel.py  projection.py  schedule.py
dagua/render/: AGENTS.md  CLAUDE.md  __init__.py  graphviz.py  mpl.py  svg.py
docs/: BASELINE_PLAYBOOK.md  BENCHMARK_ARTIFACT_GUIDE.md  BENCHMARK_FAILURE_TAXONOMY.md  COMMAND_CHEATSHEET.md  COMPETITOR_GEOMETRY_MEMO.md  CRITERIA_LEDGER.md  DEVELOPER_OVERVIEW.md  INTERACTIVE_PLAYGROUND.md  ITERATION_WORKFLOW.md  LAYOUT_VS_RENDER_REFERENCE.md  LLM_TUTORIAL.md  MAINTENANCE_CHECKLIST.md  MONEY_GRAPHS.md  OPEN_ISSUES.md  README.md  STATUS.md  VISUAL_RESET_BRIEF.md  how_dagua_works.md  interactive_playground.ipynb  tutorial_walkthrough.ipynb
docs/competitors/: README.md  dagre.md  elk.md  graphviz.md  networkx.md
docs/gallery/: README.md  gallery_manifest.json
docs/glossary/: dagua_glossary.tex  glossary_manifest.json
docs/video/: README.md  script.md  shotlist.md
examples/: AGENTS.md  custom_constraints.py  large_graph.py  neural_network.py  quickstart.py
examples/formats/: README.md  annotated_graph.json  annotated_graph.yaml
scripts/: aesthetic_gallery.py  bench_large.py  build_gallery.py  build_glossary.py  build_how_dagua_works.py  build_visual_audit.py  check-tasks.sh  clean-tasks.sh  dispatch.sh
tests/: AGENTS.md  CLAUDE.md  conftest.py  test_animation.py  test_bench_large.py  test_benchmark_rare.py  test_benchmark_standard.py  test_cascade.py  test_cli.py  test_cluster.py  test_config_defaults.py  test_cycle.py  test_defaults.py  test_edge_optimization.py  test_elements.py  test_flex.py  test_graph.py  test_how_dagua_works.py  test_integration.py  test_io.py  test_metrics.py  test_playground.py  test_reference_glossary.py  test_routing.py  test_scaling.py  test_showcase_gallery.py  test_smoke.py  test_style.py  test_visual_audit.py  ui_feature_playground.ipynb
tests/test_eval/: test_aesthetic.py  test_benchmark_pipeline.py  test_graphs.py  test_igraph_competitor.py  test_multi_comparison.py  test_sweep.py
tests/test_layout/: test_cluster_geometry.py  test_constraints.py  test_engine.py  test_init_placement.py  test_projection.py
tests/test_render/: test_mpl.py  test_svg.py
