[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "dagua"
version = "0.0.2"
description = "GPU-accelerated differentiable graph layout engine built on PyTorch"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    {name = "John Mark Taylor"},
]
keywords = ["graph", "layout", "visualization", "pytorch", "dag", "graphviz", "hierarchical"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "torch>=1.9",
]

[project.optional-dependencies]
render = ["matplotlib>=3.5"]
graphviz = ["graphviz>=0.20"]
yaml = ["pyyaml>=6.0"]
dev = [
    "matplotlib>=3.5",
    "pyyaml>=6.0",
    "pytest>=7.0",
    "pytest-cov",
    "ruff>=0.4",
    "mypy",
    "pip-audit",
    "pre-commit",
]
test = [
    "pytest>=7.0",
    "matplotlib>=3.5",
    "pyyaml>=6.0",
]
igraph = ["igraph>=0.10"]
scipy = ["scipy>=1.7"]
pydot = ["pydot>=1.4"]
interop = ["igraph>=0.10", "scipy>=1.7", "pydot>=1.4"]
ai = [
    "anthropic>=0.40",
    "openai>=1.0",
]

[project.urls]
Homepage = "https://github.com/johnmarktaylor91/dagua"
Repository = "https://github.com/johnmarktaylor91/dagua"
Issues = "https://github.com/johnmarktaylor91/dagua/issues"

[project.scripts]
dagua = "dagua.cli:main"

[tool.setuptools.packages.find]
include = ["dagua*"]

[tool.setuptools.package-data]
"dagua.graphs" = ["*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "smoke: quick sanity checks",
    "slow: tests that take >10s",
    "benchmark: benchmark suite tests and artifact generation",
    "gpu: tests requiring CUDA",
    "rare: extreme scale tests (5M+ nodes) — never run routinely",
]

[tool.coverage.run]
source = ["dagua"]
branch = true

[tool.coverage.report]
show_missing = true
skip_empty = true

[tool.coverage.html]
directory = "tests/test_outputs/reports/coverage_html"

[tool.coverage.lcov]
output = "tests/test_outputs/coverage.lcov"

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true
check_untyped_defs = false
disallow_untyped_defs = false

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
version_variables = ["dagua/__init__.py:__version__"]
branch = "main"
major_on_zero = true
build_command = "pip install build && python -m build"
commit_message = "chore(release): {version}"

[tool.semantic_release.remote]
type = "github"
token = { env = "GH_TOKEN" }

[tool.semantic_release.publish]
upload_to_vcs_release = true
